# cancellation-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb
src/cancellation_analysis/: __init__.py  plots.py
